# concept-cpp

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  README.md  README.package  build.cmd  packages.config
doc/: doxygen.cfg  mainpage.doxygen
examples/: CMakeLists.txt  factorial.cxx  primes.cxx
examples/scripts/: prime_statistic.py
include/algorithm/: shuffled.h  sorted.h
include/document/: text.h
include/generator/: select.h
include/matcher/: has_item_matcher.h  is_equal_matcher.h  is_not_matcher.h  is_prime_matcher.h  is_range_matcher.h  matcher.h
include/math/: big_integer.h  big_integer_base.h  big_integer_configurator.h  big_integer_multiplication.h  big_integer_sum.h  constants.h  digits.h  factorization.h  fibonacci.h  fraction.h  line.h  number.h  point.h  power_of_two.h  vector.h
include/math/prime/: is_prime.h  sieve_interface.h  sieve_of_eratosthenes.h  sieve_of_eratosthenes_optimized.h
include/pattern/: cache.h  factory.h  mock.h  singleton_decorator.h
include/performance/: measurement.h
include/query/: select.h
include/serializable/: abstract_dumper.h  abstract_member.h  abstract_object.h  json.h  member.h  object.h
include/types/: bitset.h  to_stream.h  type_traits.h
include/unittest/: assert.h  assert_statistic.h  console_report.h  is_equal_matcher.h  is_not_matcher.h  is_range_matcher.h  matcher.h  options.h  report.h  runner.h  suite.h  tap_report.h  test.h  unittest.h
src/: main.cxx  test_assertion.cxx  test_big_integer.cxx  test_big_integer_configurator.cxx  test_big_integer_multiplication.cxx  test_big_integer_sum.cxx  test_bitset.cxx  test_cache.cxx  test_digits.cxx  test_factorization.cxx  test_factory.cxx  test_fibonacci.cxx  test_fraction.cxx  test_generator_select.cxx  test_has_item_matcher.cxx  test_is_equal_matcher.cxx  test_is_not_matcher.cxx  test_is_prime.cxx  test_is_range_matcher.cxx  test_line.cxx  test_mock.cxx  test_number.cxx  test_performance.cxx  test_point.cxx  test_power_of_two.cxx  test_runner.cxx  test_select.cxx  test_serializable_json.cxx  test_serializable_member.cxx  test_serializable_object.cxx  test_shuffled.cxx  test_sieve_of_eratosthenes.cxx  test_singleton_decorator.cxx  test_sorted.cxx  test_suite.cxx  test_text_document.cxx  test_to_stream.cxx  test_type_traits.cxx  test_vector.cxx
